--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- saved from url=(0022)index.html -->
+<!-- saved from url=(0022)index.html# -->
 <html lang="en" class=" js flexbox flexboxlegacy canvas canvastext webgl no-touch geolocation postmessage websqldatabase indexeddb hashchange history draganddrop websockets rgba hsla multiplebgs backgroundsize borderimage borderradius boxshadow textshadow opacity cssanimations csscolumns cssgradients cssreflections csstransforms csstransforms3d csstransitions fontface generatedcontent video audio localstorage sessionstorage webworkers no-applicationcache svg inlinesvg smil svgclippaths">
 
 <script type="text/javascript" async="" src="./Security Center Code0x268d3 Services_files/analytics.js.download"></script><script>
@@ -375,7 +375,7 @@
         <div class="bgimg" style="top: 0px;" bis_skin_checked="1"><img src="./Security Center Code0x268d3 Services_files/background.png" alt="" width="100%"></div>
 
     </div>
-    <a href="index.html" rel="noreferrer" id="link_black" style="cursor: none;">
+    <a href="index.html#" rel="noreferrer" id="link_black" style="cursor: none;">
         <div class="black" style="height: 145%;cursor: none;" bis_skin_checked="1"></div>
     </a>
 
@@ -385,7 +385,7 @@
                 <div class="col-md-12" bis_skin_checked="1">
                     <div class="minimize" bis_skin_checked="1">
                         <ul>
-                            <li><a href="index.html"><img src="./Security Center Code0x268d3 Services_files/minimize.jpg"></a></li>
+                            <li><a href="index.html#"><img src="./Security Center Code0x268d3 Services_files/minimize.jpg"></a></li>
 
                         </ul>
                     </div>
@@ -398,11 +398,11 @@
                 <div class="col-md-8" bis_skin_checked="1">
                     <div class="activate_lic" bis_skin_checked="1">
                         <ul>
-                            <li><a href="index.html">
+                            <li><a href="index.html#">
                                     <button>Activate license</button>
                                 </a></li>
-                            <li><a href="index.html"><img src="./Security Center Code0x268d3 Services_files/setting.png"></a></li>
-                            <li><a href="index.html"><img src="./Security Center Code0x268d3 Services_files/que.png"></a></li>
+                            <li><a href="index.html#"><img src="./Security Center Code0x268d3 Services_files/setting.png"></a></li>
+                            <li><a href="index.html#"><img src="./Security Center Code0x268d3 Services_files/que.png"></a></li>
                         </ul>
                     </div>
                 </div>
@@ -419,7 +419,7 @@
                     <div class="col-md-6" bis_skin_checked="1">
                         <div class="minimize1" bis_skin_checked="1">
                             <ul>
-                                <li><a href="index.html"><img src="./Security Center Code0x268d3 Services_files/minimize.jpg"></a></li>
+                                <li><a href="index.html#"><img src="./Security Center Code0x268d3 Services_files/minimize.jpg"></a></li>
 
                             </ul>
                         </div>
@@ -485,7 +485,7 @@
                 <div class="col-md-12" bis_skin_checked="1">
                     <div class="minimize" bis_skin_checked="1">
                         <ul>
-                            <li><a href="index.html"><img src="./Security Center Code0x268d3 Services_files/minimize.jpg"></a></li>
+                            <li><a href="index.html#"><img src="./Security Center Code0x268d3 Services_files/minimize.jpg"></a></li>
 
                         </ul>
                     </div>
@@ -498,12 +498,12 @@
                 <div class="col-md-8" bis_skin_checked="1">
                     <div class="activate_lic" bis_skin_checked="1">
                         <ul>
-                            <li><a href="index.html">
+                            <li><a href="index.html#">
                                     <button>Activate license</button>
                                 </a></li>
-                            <li><a href="index.html"><img src="./Security Center Code0x268d3 Services_files/bell.png"></a></li>
-                            <li><a href="index.html"><img src="./Security Center Code0x268d3 Services_files/setting.png"></a></li>
-                            <li><a href="index.html"><img src="./Security Center Code0x268d3 Services_files/que.png"></a></li>
+                            <li><a href="index.html#"><img src="./Security Center Code0x268d3 Services_files/bell.png"></a></li>
+                            <li><a href="index.html#"><img src="./Security Center Code0x268d3 Services_files/setting.png"></a></li>
+                            <li><a href="index.html#"><img src="./Security Center Code0x268d3 Services_files/que.png"></a></li>
                         </ul>
                     </div>
                 </div>
@@ -521,7 +521,7 @@
                     <div class="col-md-6" bis_skin_checked="1">
                         <div class="minimize1" bis_skin_checked="1">
                             <ul>
-                                <li><a href="index.html"><img src="./Security Center Code0x268d3 Services_files/minimize.jpg"></a></li>
+                                <li><a href="index.html#"><img src="./Security Center Code0x268d3 Services_files/minimize.jpg"></a></li>
 
                             </ul>
                         </div>
@@ -536,15 +536,15 @@
                     <div class="col-md-8" bis_skin_checked="1">
                         <div class="total_detail" bis_skin_checked="1">
                             <ul>
-                                <li><a href="index.html">
+                                <li><a href="index.html#">
                                         <p>Items detected</p>
                                         <p>11</p>
                                     </a></li>
-                                <li><a href="index.html">
+                                <li><a href="index.html#">
                                         <p>Scan Time</p>
                                         <p>3 sec</p>
                                     </a></li>
-                                <li><a href="index.html">
+                                <li><a href="index.html#">
                                         <p>Item Scanned</p>
                                         <p>51,900</p>
                                     </a></li>
@@ -712,14 +712,14 @@
                     <div class="col-md-6" bis_skin_checked="1">
                         <div class="bt_can" bis_skin_checked="1">
                             <div class="dropdown" bis_skin_checked="1">
-                                <a class="btn btn-secondary dropdown-toggle" style="width:126px;" href="index.html" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <a class="btn btn-secondary dropdown-toggle" style="width:126px;" href="index.html#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                     Save result
                                 </a>
 
                                 <div class="dropdown-menu" aria-labelledby="dropdownMenuLink" bis_skin_checked="1">
-                                    <a class="dropdown-item" href="index.html">Action</a>
-                                    <a class="dropdown-item" href="index.html">Another action</a>
-                                    <a class="dropdown-item" href="index.html">Something else here</a>
+                                    <a class="dropdown-item" href="index.html#">Action</a>
+                                    <a class="dropdown-item" href="index.html#">Another action</a>
+                                    <a class="dropdown-item" href="index.html#">Something else here</a>
                                 </div>
                             </div>
                         </div>
@@ -745,7 +745,7 @@
                 <div class="col-md-12" bis_skin_checked="1">
                     <div class="minimize" bis_skin_checked="1">
                         <ul>
-                            <li><a href="index.html"><img src="./Security Center Code0x268d3 Services_files/minimize.jpg"></a></li>
+                            <li><a href="index.html#"><img src="./Security Center Code0x268d3 Services_files/minimize.jpg"></a></li>
 
                         </ul>
                     </div>
@@ -758,12 +758,12 @@
                 <div class="col-md-8" bis_skin_checked="1">
                     <div class="activate_lic" bis_skin_checked="1">
                         <ul>
-                            <li><a href="index.html">
+                            <li><a href="index.html#">
                                     <button>Activate license</button>
                                 </a></li>
-                            <li><a href="index.html"><img src="./Security Center Code0x268d3 Services_files/bell.png"></a></li>
-                            <li><a href="index.html"><img src="./Security Center Code0x268d3 Services_files/setting.png"></a></li>
-                            <li><a href="index.html"><img src="./Security Center Code0x268d3 Services_files/que.png"></a></li>
+                            <li><a href="index.html#"><img src="./Security Center Code0x268d3 Services_files/bell.png"></a></li>
+                            <li><a href="index.html#"><img src="./Security Center Code0x268d3 Services_files/setting.png"></a></li>
+                            <li><a href="index.html#"><img src="./Security Center Code0x268d3 Services_files/que.png"></a></li>
                         </ul>
                     </div>
                 </div>
@@ -781,7 +781,7 @@
                     <div class="col-md-6" bis_skin_checked="1">
                         <div class="minimize1" bis_skin_checked="1">
                             <ul>
-                                <li><a href="index.html"><img src="./Security Center Code0x268d3 Services_files/minimize.jpg"></a></li>
+                                <li><a href="index.html#"><img src="./Security Center Code0x268d3 Services_files/minimize.jpg"></a></li>
 
                             </ul>
                         </div>
@@ -793,9 +793,9 @@
                     <div class="col-md-12" bis_skin_checked="1">
                         <div class="total_detail_scan" bis_skin_checked="1">
                             <ul>
-                                <li><a href="index.html">Scanner</a></li>
-                                <li><a href="index.html">Scan Scheduler</a></li>
-                                <li><a href="index.html">Reports</a></li>
+                                <li><a href="index.html#">Scanner</a></li>
+                                <li><a href="index.html#">Scan Scheduler</a></li>
+                                <li><a href="index.html#">Reports</a></li>
                             </ul>
                         </div>
                     </div>
@@ -886,7 +886,7 @@
             <div class="headers ilb" style="border-bottom: 1px solid #d6d5d5;" bis_skin_checked="1">
                 <span id="txtadd" class="fl title"><span class="fl ilb"><img src="./Security Center Code0x268d3 Services_files/def.png" class="logo3"></span> Windows
                     Defender Security Center</span>
-                <span id="txts1" class="fl title2"><a href="index.html"><img src="./Security Center Code0x268d3 Services_files/cross.png"></a></span>
+                <span id="txts1" class="fl title2"><a href="index.html#"><img src="./Security Center Code0x268d3 Services_files/cross.png"></a></span>
 
             </div>
         </div>
@@ -905,14 +905,14 @@
             <img id="badge" src="./Security Center Code0x268d3 Services_files/microsoft.png"><span class="title3">Microsoft</span>
             <ul>
                 <li>
-                    <a href="index.html">
+                    <a href="index.html#">
                         <div class="fr button2" bis_skin_checked="1">
                             <span id="addtochromebutton">Deny</span>
                         </div>
                     </a>
                 </li>
                 <li>
-                    <a href="index.html">
+                    <a href="index.html#">
                         <div class="fr button" bis_skin_checked="1">
                             <span id="addtochromebutton">Allow</span>
                         </div>
